# rob_camarero

./: CMakeLists.txt  README.md  mapa_restaurante.pgm  mapa_restaurante.yaml  package.xml
launch/: rob_camarero.launch  turtlebot3_restaurante.launch
simulado/: fsm.py  interfaz_mov.py  manos.py  navegacion.py  voz.py
worlds/: restaurante.world
